Fixed textAreas and other various spacing and styles

--- a/style/index.css
+++ b/style/index.css
@@ -186,32 +186,30 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
-.newThreadCard {
-  margin-top: 5px;
+.--jp-commenting-new-thread-area {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  border-radius: var(--jp-border-radius);
+  border: 1px solid #e0e0e0;
+  box-sizing: border-box;
+}
+
+
+.--jp-commenting-new-thread-button {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  border-radius: 2px;
-  padding: 1px;
+  border-radius: var(--jp-border-radius);
   border: 1px solid #e0e0e0;
   box-sizing: border-box;
 }
 
-.threadCreateCard {
-  display: flex;
-  flex-direction: column;
-  border-radius: 2px;
-  padding: 1px;
-  border: 1px solid #e0e0e0;
-  box-sizing: border-box;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
-}
-
-.newThreadCard:hover {
+.--jp-commenting-new-thread-button:hover {
   box-shadow: var(--jp-elevation-z6);
 }
 
-.newThreadLabel {
+.--jp-commenting-new-thread-label {
   display: flex;
   flex-grow: 2;
   white-space: nowrap;
@@ -222,48 +220,56 @@
   margin-left: 5px;
 }
 
-.newThreadButton {
+.--jp-commenting-user-set-area {
   display: flex;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  margin-right: 5px;
+  flex-direction: column;
+  border-radius: var(--jp-border-radius);
+  padding: 1px;
+  border: 1px solid #e0e0e0;
+  box-sizing: border-box;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
-.textFieldExpanded {
-  display: flex;
-
-  max-height: 100%;
-  max-width: 350px;
-
-  font-size: 0.8em;
-  line-height: normal;
-}
-
-.textFieldNotExpanded {
-  display: flex;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-  max-width: 350px;
-  max-height: 30px;
-
-  font-size: 0.8em;
-  line-height: normal;
-}
-
-.textArea {
+.--jp-commenting-text-area {
   border-color: var(--jp-input-border-color);
   border-radius: var(--jp-border-radius);
   border-width: var(--jp-border-width);
   background-color: var(--jp-input-background);
+
+  width: 100%;
+  height: 100%;
+
+  font-size: var(--jp-content-font-size0);
+  line-height: normal;
+  padding: 4px;
+  resize: none;
 }
 
-.textArea:hover {
+.--jp-commenting-text-area:hover {
   background-color: var(--jp-input-hover-background);
 }
 
-.textArea:focus {
+.--jp-commenting-text-area:focus {
   background-color: var(--jp-input-active-background);
   border-color: var(--jp-input-active-border-color);
   box-shadow: var(--jp-input-box-shadow);
+}
+
+.--jp-commenting-annotation-not-expanded {
+  display: flex;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 350px;
+  max-height: 30px;
+  font-size: var(--jp-content-font-size0);
+  line-height: normal;
+}
+
+.--jp-commenting-annotation-expanded {
+  display: flex;
+  font-size: var(--jp-content-font-size0);
+  line-height: normal;
+  max-height: 100%;
+  max-width: 350px;
+  overflow-wrap: anywhere;
 }
